# volcano

./: .gitattributes  .gitignore  .gitmodules  .gn  .travis.yml  BUILD.gn  CONTRIBUTING.md  README.md  appveyor.yml  build.cmd
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ubuntu.yml  win2016.yml
gn/: build-posix.sh
src/command/: add_depth.cpp  command.cpp  command.h  command_buffer.h  command_builder.h  compute.cpp  create_pass.cpp  create_pipe.cpp  fence.cpp  fence.h  find_in_paths.cpp  mmap.cpp  pipeline.cpp  pipeline_create.cpp  render.cpp  shader.cpp  subpass.cpp
src/core/: VkEnum.cpp  VkEnum.h  VkInit.h  VkPtr.h  find_in_paths.cpp  log.cpp  mmap.cpp  reflectionmap.cpp  reflectionmap.h  reflectionmaptypes.h  reflectionsetup.cpp  structs.h  utf8dec.cpp  utf8dec.h  utf8enc.cpp  utf8enc.h
src/gn/: BUILD.gn  BUILDCONFIG.gn  build-posix.sh  cache-git.sh  winpatch.py
src/gn/config/: BUILD.gn  arm.gni  compiler.gni  mips.gni  precompiled_header.gni
src/gn/config/android/: BUILD.gn
src/gn/config/ios/: BUILD.gn
src/gn/config/mac/: BUILD.gn
src/gn/config/posix/: BUILD.gn
src/gn/config/sanitizers/: sanitizers.gni
src/gn/config/win/: BUILD.gn
src/gn/toolchain/: BUILD.gn  cc_wrapper.gni  clang.gni  compiler_version.gni  concurrent_links.gni  gcc_ar_wrapper.py  gcc_compile_wrapper.py  gcc_link_wrapper.py  gcc_solink_wrapper.py  gcc_toolchain.gni  rep.py  sysroot.gni  toolchain.gni  wrapper_utils.py
src/gn/toolchain/android/: BUILD.gn  android_ndk_major_version.py  bundle.py  settings.gni
src/gn/toolchain/mac/: BUILD.gn  compile_xcassets.py  filter_libtool.py  find_sdk.py  get_tool_mtime.py  ios_sdk.gni  linker_driver.py  mac_sdk.gni  sdk_info.py  settings.gni
src/gn/toolchain/posix/: BUILD.gn  settings.gni  toolchain.py
src/gn/toolchain/win/: BUILD.gn  asm_wrapper.py  gn_helpers.py  link_wrapper.py  manifest.gni  manifest_to_rc.py  manifest_wrapper.py  message_compiler.gni  message_compiler.py  midl.gni  midl_wrapper.py  rc_wrapper.py  recursive_mirror.py  settings.gni  stamp.py  toolchain.py
src/language/: VkEnum.cpp  VkEnum.h  VkInit.h  VkPtr.h  choose.cpp  debug.cpp  device.cpp  imageview.cpp  language.cpp  language.h  log.cpp  old_debug.cpp  open.cpp  queues.cpp  requestqfams.cpp  supported_queues.cpp  swapchain.cpp  utf8dec.cpp  utf8dec.h  utf8enc.cpp  utf8enc.h
src/memory/: add_depth.cpp  buffer.cpp  descriptor.cpp  dev_framebufs.cpp  dev_mem.cpp  image.cpp  layout.cpp  memory.cpp  memory.h  sampler.cpp  stage.cpp  stage.h  transition.cpp
src/science/: compute.cpp  descriptor.cpp  image.cpp  pipe.cpp  present.cpp  reflect.cpp  reflect.h  sampler.cpp  science-glfw.h  science.cpp  science.h
src/tools/: BUILD.gn  copyHeader.cpp  copy_header.cpp  traverse.cpp
test/: BUILD.gn  basic_test.cpp  basic_test.frag  basic_test.vert  language_test.cpp
