# Copyright (c) 2017 the Volcano Authors. Licensed under GPLv3.

import("//src/gn/vendor/glslangValidator.gni")

glslangVulkanToHeader("shaders") {
  copy_header = "../src/tools:copyHeader"
  sources = [
    "basic_test.vert",
    "basic_test.frag",
  ]
}

executable("basic_test") {
  testonly = true

  sources = [
    "basic_test.cpp",
  ]
  configs += [ "//src/gn/config:optimize_debug" ]

  deps = [
    ":shaders",
    "..:language",
    "..:command",
    "..:science",
    "..:memory",
    "//src/gn/vendor/glfw",
    "//src/gn/vendor/spirv_cross",
    "//src/gn/vendor/vulkansamples:glm",
    "//src/gn/vendor/vulkansamples",
    "//src/gn/vendor/skia",
  ]
  if (is_win) {
    # Windows has the notion of "console" and "windowed" apps.
    configs += [ "//src/gn/config/win:windowed" ]
  }
}
