# Copyright (c) 2017 the Volcano Authors. Licensed under GPLv3.

executable("copyHeader") {
  sources = [
    "copyHeader.cpp",
    "traverse.cpp",
  ]

  deps = [
    "../../vendor/glslang",
    "../../vendor/glslang:SPIRV",
    "../../vendor/glslang:OGLCompiler",
    "../../vendor/glslang:HLSL",
    "../../vendor/glslang:glslang-default-resource-limits",
  ]

  configs += [
    "../../vendor/glslang:glslang_local_config",
  ]
}
