# Copyright (c) 2017 the Volcano Authors. Licensed under GPLv3.

executable("copyHeader") {
  sources = [
    "copy_header.cpp",
    "traverse.cpp",
  ]

  deps = [
    "//src/gn/vendor/glslang",
    "//src/gn/vendor/glslang:SPIRV",
    "//src/gn/vendor/glslang:OGLCompiler",
    "//src/gn/vendor/glslang:HLSL",
    "//src/gn/vendor/glslang:glslang-default-resource-limits",
  ]

  configs += [
    "//src/gn/vendor/glslang:glslang_local_config",
  ]
}
