# Copyright 2016 The Chromium Authors. All rights reserved.
# Copyright (c) 2017 the Volcano Authors. All rights reserved.
# Licensed under the GPLv3.

import("//src/gn/toolchain/concurrent_links.gni")

if (current_toolchain == default_toolchain) {
  pool("link_pool") {
    depth = concurrent_links
  }
}
